--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,13 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-
+    open-in-view: false
+server:
+  servlet:
+    context-path: /api/v1
+logging:
+  level:
+    '[org.springframework.web]': INFO
+jwt:
+  secret: c2VjcmV0S2V5Rm9ySldUU2lnbmluZ1B1cnBvc2VzT25seQ==
+  expiration: 86400000
